--- a/homework/week 2/deBilt.html
+++ b/homework/week 2/deBilt.html
@@ -374,10 +374,10 @@
   20171229,   28
   20171230,   88
   20171231,  106
-	</textarea>
+  </textarea>
 
 	<!-- canvas to draw on -->
-	<canvas id = "myCanvas">
+	<canvas id = "myCanvas" width="1000" height="1500">
 
 	</canvas>
 
