--- a/homework/week 2/deBilt.html
+++ b/homework/week 2/deBilt.html
@@ -6,6 +6,13 @@
 
 <!doctype HTML>
 <html>
+<head> 
+	<title> Average temperature deBilt</title>
+	<p> Marc Moorman </br>
+		10769781 </br>
+		<a href = "http://projects.knmi.nl/klimatologie/daggegevens/selectie.cgi"> Data source </a>
+	</p>
+	</head>
 <body>
 	<textarea id = "rawdata">
 	#date,avg_temp 
