--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 
 <!doctype HTML>
 <html>
+<head>
+	<title> Index page Marc Moorman</title>
+</head>
 <body>
+	<p> Marc Moorman </br>
+	10769781 </p>
+	<p> Individual homework assignments </p>
 
-	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%202"> Week 2 </a>
+	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%201"> Homework week 1 </a> </br>
+	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%202"> Homework Week 2 </a>
 
+	<p> Design homework </p>
+	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 1 </a> </br>
 </body>
 
 </html>
