--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 	<p> Design homework </p>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 1 </a> </br>
+	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 2 </a> </br>
 </body>
 
 </html>
