--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<p> Individual homework assignments </p>
 
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%201"> Homework week 1 </a> </br>
-	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%202"> Homework Week 2 </a>
+	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%202"> Homework Week 2 </a> </br>
 
 	<p> Design homework </p>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 1 </a> </br>
-	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 2 </a> </br>
+	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%202"> Homework week 2 </a> </br>
 </body>
 
 </html>
