--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<p> Individual homework assignments </p>
 
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%201"> Homework week 1 </a> </br>
-	<a href = "dataprocessing/homework/week 2/deBiltExternal.html"> Line graph </a> </br>
+	<a href = "https://marcmrman.github.io/dataprocessing/homework/week%202/deBilt.html"> Line graph </a> </br>
 
 	<p> Design homework </p>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 1 </a> </br>
