--- a/homework/week 3/index2.html
+++ b/homework/week 3/index2.html
@@ -16,12 +16,13 @@
 	  	body.append("h2").text("Canadian population development 1851-2001")
 
 	  	d3.json("Canadian population 1851-2001.json", function(data) {
-
+	  		// put data in new variable
 	  		var dataset = data
 
 	  		var population = [];
 	  		var years = [];
 
+	  		// put info in seperate arrays
 	  		for (var i = 0; i < dataset.data.length; i ++){
 	  			var populationX = dataset.data[i][" population"];
 	  			population.push(populationX);
@@ -32,10 +33,10 @@
 	  		console.log(population)
 	  		//console.log(years)
 
-		    // Width and height
+		    // Width and height of svg element
 			var w = 1000;
-			var h = 300;
-			var barPadding = 1;
+			var h = 400;
+			//var barPadding = 1;
 			var padding = 10
 
 
@@ -50,20 +51,28 @@
 			// 	return d }))
 			
 			// scaling
-			
-			//var x_domain = d3.extent([1851, 2001])
-
 			var scaleX = d3.scale.linear()
-                     	.domain([1851, 2001])
-                     	.range([10, w]);
+                     	.domain([1841, 2001])
+                     	.range([100, w - 30]);
 
 			var scaleY = d3.scale.linear()
-								.domain([0, population[15]])
-								.range([0, h]);
+								.domain([population[15], 0])
+								.range([10, h - 20]);
 
 			// axis
-			var x_axis = d3.svg.axis().scale(scaleX).orient("bottom").ticks(16).tickFormat(function(d){ return d.years;});
-			var y_axis = d3.svg.axis().scale(scaleY).orient("left").ticks(5).tickFormat(function(d){ return d; });
+			var x_axis = d3.svg.axis()
+								.scale(scaleX)
+								.orient("bottom")
+								.ticks(16)
+			
+			var y_axis = d3.svg.axis()
+								.scale(scaleY)
+								.orient("left")
+								.ticks(5)
+
+			var tip = d3.tip().attr('class', 'd3-tip').offset([-10, 0]).html(function(d) {
+					    return "<strong>Population:</strong> <span style='color:red'>" + d.frequency + "</span>";
+			});
 
 		    //Create SVG element
 			var svg = d3.select("body")
@@ -77,10 +86,10 @@
 			   .enter()
 			   .append("rect")
 			   .attr("x", function(d, i){
-			   		return i * (w/ (dataset.data.length - barPadding)) + 50
+			   		return i * ((w - 100) / dataset.data.length) + 100  // - barPadding)
 			   })
 			   .attr("y", function(d, i){
-			   		return h - population[i];
+			   		return (h- 20) - population[i]; //((h -20 )-
 			   })
 			   .attr("width", 20)
 			   .attr("height", function(d, i){
@@ -88,14 +97,16 @@
 			   })
 			   .attr("fill", "red");
 
+			// drawing x axis
 			svg.append("g")
 			    .attr("class", "axis")
-			    .attr("transform", "translate(0," + h + ")")
+			    .attr("transform", "translate(0," + (h - 20) + ")")
 			    .call(x_axis);
-
+			
+			// drawing y axis
 			svg.append("g")
 				.attr("class", "axis")
-			    .attr("transform", "translate("+ padding + ", 0)")
+			    .attr("transform", "translate(" + (w - 900) + ", 0)")
 			    .call(y_axis);
         });
   	</script>
