--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/homework/week%201"> Week 1: Scraper </a> </br>
 	<a href = "https://marcmrman.github.io/dataprocessing/homework/week%202/deBilt.html"> Week 2: Line graph </a> </br>
-	<a href = " dataprocessing/homework/week%203/index.html "> Week 3: Bar Chart </a> </br>
+	<a href = "https://github.com/MarcMrman/dataprocessing/blob/master/homework/week%203/index.html"> Week 3: Bar Chart </a> </br>
 
 	<p> Design homework </p>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 1 </a> </br>
