--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<p> Design homework </p>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%201"> Homework week 1 </a> </br>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%202"> Homework week 2 </a> </br>
+	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week%203"> Homework week 3 </a> </br>
+
 </body>
 
 </html>
