--- a/homework/week_3/indexBarChart.html
+++ b/homework/week_3/indexBarChart.html
@@ -16,8 +16,8 @@
 	  	body.append("h2").text("Canadian population development over 150 years")
 	  	body.append("p")
 	  		.text("This bar char shows the growth of the amount of inhabitants in Canada in millions. The data is is given per then years.")
-	  	body.append("p").text("The data source can be found if you click here").on("click", function(){window.open("https:vincentarelbundock.github.io/Rdatasets/datasets.html")});
-	  	
+	  	body.append("p").text("The data is retrieved from https://vincentarelbundock.github.io/Rdatasets/datasets.html")
+
 	  	d3.json("Canadian population 1850-2000.json", function(data) {
 	  		
 	  		// put data in new variable
