--- a/homework/week_4/scatter.html
+++ b/homework/week_4/scatter.html
@@ -3,11 +3,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- loading external files -->
+	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<!-- <script src="https://d3js.or/d3-queue.v3.min.js"></script> -->
 	<script type="text/javascript" src="scatter.js"></script>
 	<link rel="stylesheet" href="scatter.css">
 	<title>Scatterplot</title>
 </head>
 <body>
+	<h1> Marc Moorman </br>
+	10769781 </h1>
+	<h2> GDP (in millions) and real minimum wage/average hours worked annually from 2004-2013</h2>
 	<script type="text/javascript">
 	</script>
 </body>
