--- a/homework/week_4/scatter.html
+++ b/homework/week_4/scatter.html
@@ -5,7 +5,7 @@
 <head>
 	<!-- loading external files -->
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<!-- <script src="https://d3js.or/d3-queue.v3.min.js"></script> -->
+	<script src="/d3/d3-tip.js"></script>	
 	<script type="text/javascript" src="scatter.js"></script>
 	<link rel="stylesheet" href="scatter.css">
 	<title>Scatterplot</title>
@@ -13,8 +13,34 @@
 <body>
 	<h1> Marc Moorman </br>
 	10769781 </h1>
-	<h2> GDP (in millions) and real minimum wage/average hours worked annually from 2004-2013</h2>
-	<script type="text/javascript">
-	</script>
+	<h2> GDP (in millions) and average hours worked annually from 2004-2013</h2>
+	<div class="dropdown"> 
+		<button class="dropbtn"> Year </button>
+		<div class="dropdown-content"> 
+			<a href="#"> 2003 </a>
+			<a href="#"> 2004 </a>  
+		</div>
+	</div>	
+
+<!-- 	<div class="dropdown"> 
+		<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 			Year </button>
+		<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+			<button class="dropdown-item" type="button"> 2003 </button>
+			<button class="dropdown-item" type="button"> 2004 </button> -->
+			<!-- <button class="dropdown-item" type="button" onclick="updateChart" > 2003 </button> -->
+
+		<!-- </div> -->
+	<!-- <script type="text/javascript">
+	</script> -->
+    <div style="position: absolute; bottom: 3px; background: rgba(0, 250, 250, 1);">
+    <p> Marc Moorman </br>
+    	10769781</p>
+    <p> Data sources: </br>
+		<a href="http://stats.oecd.org/BrandedView.aspx?oecd_bv_id=pdtvy-data-en&doi=data-00686-en">GDP</a> </br>
+		<a href="http://stats.oecd.org/BrandedView.aspx?oecd_bv_id=lfs-data-en&doi=data-00656-en">Real minimum wage</a> </br>
+		<a href="http://stats.oecd.org/BrandedView.aspx?oecd_bv_id=lfs-data-en&doi=data-00303-en#">Hours worked annually</a> </br>
+		<p> 2018 (C)</p>
+	</p>
+	</div>
 </body>
 </html>
