--- a/homework/week_4/testscatter.html
+++ b/homework/week_4/testscatter.html
@@ -5,13 +5,13 @@
 <head>
 	<!-- loading external files -->
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script type="text/javascript" src="d3/d3-tip.js"></script>
-	<script type="text/javascript" src="scatter.js"></script>
+	<!-- <script src="/d3/d3-tip.js"></script> -->	
+	<script type="text/javascript" src="testscatter.js"></script>
 	<link rel="stylesheet" href="scatter.css">
 	<title>Scatterplot</title>
 </head>
 <body>
-	<h1> Marc Moorman </br>
+	<h1> TEST HTML </br>
 	10769781 </h1>
 	<h2> GDP (in millions) and average hours worked annually from 2004-2013</h2>
 	<div class="dropdown"> 
@@ -22,16 +22,6 @@
 		</div>
 	</div>	
 
-<!-- 	<div class="dropdown"> 
-		<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 			Year </button>
-		<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-			<button class="dropdown-item" type="button"> 2003 </button>
-			<button class="dropdown-item" type="button"> 2004 </button> -->
-			<!-- <button class="dropdown-item" type="button" onclick="updateChart" > 2003 </button> -->
-
-		<!-- </div> -->
-	<!-- <script type="text/javascript">
-	</script> -->
     <div style="position: absolute; bottom: 3px; background: rgba(0, 250, 250, 1);">
     <p> Marc Moorman </br>
     	10769781</p>
