--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week_1"> Homework week 1 </a> </br>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week_2"> Homework week 2 </a> </br>
 	<a href = "https://github.com/MarcMrman/dataprocessing/tree/master/design/week_3"> Homework week 3 </a> </br>
-
+	<a href = "https://youtu.be/qTQzHnfQBzA"> Link to youtube for project video </a> </br>
 </body>
 
 </html>
