--- a/homework/week_4/testscatter.html
+++ b/homework/week_4/testscatter.html
@@ -5,7 +5,7 @@
 <head>
 	<!-- loading external files -->
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<!-- <script src="/d3/d3-tip.js"></script> -->	
+	<script type="text/javascript" src="./d3/d3-tip.js"></script>
 	<script type="text/javascript" src="testscatter.js"></script>
 	<link rel="stylesheet" href="scatter.css">
 	<title>Scatterplot</title>
