--- a/homework/week_5_6/viewedlinks.html
+++ b/homework/week_5_6/viewedlinks.html
@@ -8,32 +8,43 @@ education expenditure = https://data.worldbank.org/indicator/SE.XPD.TOTL.GB.ZS -
 	<title>European Universities</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<!-- <script src="js/topojson.v1.min.js"></script> -->
 	<script type="text/javascript" src="./d3/d3-tip.js"></script>
  	<script type="text/javascript" src="viewedlinks.js"></script>
+<!--  	<script> 
+    $(function(){
+      $("#includedContent").load("mapEurope.html"); 
+    });
+    </script> -->
 	<link rel="stylesheet" href="viewedlinks.css">
 </head>
 <body>
 	<h1>Marc Moorman </br>
-	10769781</h1>
-	<h2>A view on education in Europe</h2>
+	10769781
+	Data sources: </br>
+	<a href="http://cwur.org/">University ranking </a></br>
+	<a href="https://data.worldbank.org/indicator/SE.XPD.TOTL.GB.ZS">Education expenditure </a>
+</h1>
+	<h2>A view on European Universities</h2>
 
 	<div class="dropdown">
 		<button onclick="myFunction()" class="dropbtn">Year</button>
 	  	<div id="myDropdown" class="dropdown-content">
-		    <button class="m" id="Wage" type="button" value="2012 [YR2012]" onclick="updateGraph()""> 2012 </button>
-			<button class="m" id="Hours" type="button" value="2013 [YR2013]" onclick="updateGraph()""> 2013 </button>
-			<button class="m" id="Hours" type="button" value="2014 [YR2014]" onclick="updateGraph()""> 2014 </button>
-			<button class="m" id="Hours" type="button" value="2015 [YR2015]" onclick="updateGraph()""> 2015 </button>
+		    <button class="m" id="2012 [YR2012]" type="button" value="2012 [YR2012]" onclick="updateBarChart(response[0], 2)""> 2012 </button>
+			<button class="m" id="2013 [YR2013]" type="button" value="2013 [YR2013]" onclick="updateBarChart(response[0], 3)""> 2013 </button>
+			<button class="m" id="2014 [YR2014]" type="button" value="2014 [YR2014]" onclick="updateBarChart(response[0], 4)""> 2014 </button>
   </div>
 </div>
+<!-- ADDING MAP EUROPE -->
+<!-- <div id="includedContent"></div> -->
 <script type="text/javascript">
-	
-	/* When the user clicks on the button, 
-toggle between hiding and showing the dropdown content */
+
+// DIT MOEt NOG IN JS ZETTEN	
+// * When the user clicks on the button, 
+// toggle between hiding and showing the dropdown content */
 function myFunction() {
     document.getElementById("myDropdown").classList.toggle("show");
 }
-
 // Close the dropdown if the user clicks outside of it
 window.onclick = function(event) {
   if (!event.target.matches('.dropbtn')) {
