--- a/homework/week_5_6/testviewedlinks.html
+++ b/homework/week_5_6/testviewedlinks.html
@@ -11,14 +11,14 @@
 	<script src="//d3js.org/topojson.v1.min.js"></script>
 	<script src="https://d3js.org/topojson.v2.min.js"></script>	
 	<script type="text/javascript" src="./d3/d3-tip.js"></script>
- 	<script type="text/javascript" src="viewedlinks.js"></script>	
+ 	<script type="text/javascript" src="testviewedlinks.js"></script>	
 	<link rel="stylesheet" href="viewedlinks.css">
 </head>
 <body>
-	<h1>Marc Moorman <br>
-	10769781 <br>
-	Data sources: <br>
-	<a href="http://cwur.org/">University ranking </a><br>
+	<h1>Marc Moorman </br>
+	10769781 </br>
+	Data sources: </br>
+	<a href="http://cwur.org/">University ranking </a></br>
 	<a href="https://data.worldbank.org/indicator/SE.XPD.TOTL.GB.ZS">Education expenditure </a>
 </h1>
 	<h2>A view on European Universities</h2>
@@ -26,9 +26,9 @@
 	<div class="dropdown">
 		<button onclick="dropwdownFunction()" class="dropbtn">Year</button>
 	  	<div id="myDropdown" class="dropdown-content">
-		    <button class="m" id="2012_[YR2012]" type="button" value="2012_[YR2012]"> 2012 </button>
-			<button class="m" id="2013_[YR2013]" type="button" value="2013_[YR2013]"> 2013 </button>
-			<button class="m" id="2014_[YR2014]" type="button" value="2014_[YR2014]"> 2014 </button>
+		    <button class="m" id="2012 [YR2012]" type="button" value="2012 [YR2012]"> 2012 </button>
+			<button class="m" id="2013 [YR2013]" type="button" value="2013 [YR2013]"> 2013 </button>
+			<button class="m" id="2014 [YR2014]" type="button" value="2014 [YR2014]"> 2014 </button>
   </div>
 </div>
 
