--- a/homework/week_5_6/viewedlinks.html
+++ b/homework/week_5_6/viewedlinks.html
@@ -16,6 +16,9 @@
 	<script src="https://d3js.org/topojson.v2.min.js"></script>	
 	<script src="./d3/d3-tip.js"></script>
  	<script src="viewedlinks.js"></script>	
+ 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+ 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="viewedlinks.css">
 </head>
 <body>
@@ -25,7 +28,7 @@
 	<a href="http://cwur.org/">University ranking </a><br>
 	<a href="https://data.worldbank.org/indicator/SE.XPD.TOTL.GB.ZS">Education expenditure </a>
 </h1>
-	<h2>A view on European Universities</h2>
+	<h2>A view on European Universities in ... (button)</h2>
 	<!-- inserting a dropdown menu -->
 	<div class="dropdown">
 		<button onclick="dropwdownFunction()" class="dropbtn">Year</button>
