--- a/homework/week_5_6/viewedlinks.html
+++ b/homework/week_5_6/viewedlinks.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 * Marc Moorman
 * 10769781 
 * HTML layout for viewed links
@@ -18,34 +18,34 @@
  	<script src="viewedlinks.js"></script>	
  	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
- 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="viewedlinks.css">
 </head>
 <body>
+	<!-- personal info and sources -->
 	<h1>Marc Moorman <br>
 	10769781 <br>
 	Data sources: <br>
 	<a href="http://cwur.org/">University ranking </a><br>
 	<a href="https://data.worldbank.org/indicator/SE.XPD.TOTL.GB.ZS">Education expenditure </a>
 </h1>
-	<h2>A view on European Universities in ... (button)</h2>
-	<!-- inserting a dropdown menu -->
+	<h2>A view on European Universities in	
+	<!-- inserting a dropdown menu using bootstrap -->
 	<div class="dropdown">
-		<button onclick="dropwdownFunction()" class="dropbtn">Year</button>
-	  	<div id="myDropdown" class="dropdown-content">
-		   <!--  id/value veranderen in leesbaarder iets -->
-		    <button class="m" id="2012" type="button" value="2012_[YR2012]"> 2012 </button>
-			<button class="m" id="2013" type="button" value="2013_[YR2013]"> 2013 </button>
-			<button class="m" id="2014" type="button" value="2014_[YR2014]"> 2014 </button>
-  </div>
+	  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Year
+	  </button>
+	  <ul class="dropdown-menu">
+	  	<button class="dropdown-item" id="2012" type="button" value="2012_[YR2012]"> 2012 </button>
+		<button class="dropdown-item" id="2013" type="button" value="2013_[YR2013]"> 2013 </button>
+		<button class="dropdown-item" id="2014" type="button" value="2014_[YR2014]"> 2014 </button>
+  </ul>
 </div>
-<!-- creating a div for map of europe -->
-<div id="container">
-	<h3>Map of Europe</h3>
-	</div>
-
-<!-- div for text with info on universities in country -->
-<div id="uniContainer">
+</h2>
+<!-- creating containers for map and bar chart -->
+<div id="containerBarChart">
 	<h4>Additional information</h4>
 	<h5>World Ranking, Institution, Publications, National Ranking</h5>
 	<div id="country">
@@ -53,5 +53,9 @@
 	<div id="uniText">
 	</div>
 </div>
+
+<div id="containerMap">
+	<h3>Map of Europe</h3>
+	</div>
 </body>
 </html>
