--- a/homework/week_5_6/viewedlinks.html
+++ b/homework/week_5_6/viewedlinks.html
@@ -31,7 +31,7 @@
 			Data sources: <br>
 			<a href="http://cwur.org/">University ranking </a><br>
 			<a href="https://data.worldbank.org/indicator/SE.XPD.TOTL.GB.ZS">Education expenditure </a>
-			</h1>
+		</h1>
 			<h2>A view on European Universities in	
 			<!-- inserting a dropdown menu using bootstrap -->
 			<div class="dropdown">
@@ -41,20 +41,25 @@
 			  	<button class="dropdown-item" id="2012" type="button" value="2012_[YR2012]"> 2012 </button>
 				<button class="dropdown-item" id="2013" type="button" value="2013_[YR2013]"> 2013 </button>
 				<button class="dropdown-item" id="2014" type="button" value="2014_[YR2014]"> 2014 </button>
-		  	</ul>
-			</div>
-			</h2>
+		</ul>
+		</div>
+		</h2>
 			<!-- creating containers for map and bar chart -->
+			<div id="description">
+			</div>
+
 			<div id="containerBarChart">
 			<h4>Additional information</h4>
 			<h5>World Ranking, Institution, Publications, National Ranking</h5>
 			<div id="country">
 			</div>
 			<div id="uniText">
-			</div>
-			</div>
+		</div>
+		</div>
 			<div id="containerMap">
 			<h3>Map of Europe</h3>
-			</div>
-			</body>
+		</div>
+		<div id="containerText">
+		</div>
+		</body>
 	</html>
