--- a/homework/week_5_6/viewedlinks.html
+++ b/homework/week_5_6/viewedlinks.html
@@ -32,34 +32,39 @@
 			<a href="http://cwur.org/">University ranking </a><br>
 			<a href="https://data.worldbank.org/indicator/SE.XPD.TOTL.GB.ZS">Education expenditure </a>
 		</h1>
-			<h2>A view on European Universities in	
+			<h2>A view on European universities in	
 			<!-- inserting a dropdown menu using bootstrap -->
+		</h2>
 			<div class="dropdown">
-			  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Year
-			  </button>
-			  <ul class="dropdown-menu">
-			  	<button class="dropdown-item" id="2012" type="button" value="2012_[YR2012]"> 2012 </button>
-				<button class="dropdown-item" id="2013" type="button" value="2013_[YR2013]"> 2013 </button>
-				<button class="dropdown-item" id="2014" type="button" value="2014_[YR2014]"> 2014 </button>
+				  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Year
+				  </button>
+				  <ul class="dropdown-menu">
+				  	<li class="dropdown-item" id="2012"> 2012</li>
+					<li class="dropdown-item" id="2013"> 2013</li>
+					<li class="dropdown-item" id="2014"> 2014</li>
 		</ul>
 		</div>
-		</h2>
 			<!-- creating containers for map and bar chart -->
 			<div id="description">
-			</div>
+		</div>
 
 			<div id="containerBarChart">
 			<h4>Additional information</h4>
 			<h5>World Ranking, Institution, Publications, National Ranking</h5>
 			<div id="country">
-			</div>
+		</div>
 			<div id="uniText">
 		</div>
 		</div>
 			<div id="containerMap">
-			<h3>Map of Europe</h3>
+				<h3>Map of Europe</h3>
 		</div>
-		<div id="containerText">
+			<div id="containerText">
 		</div>
-		</body>
-	</html>
+		<!-- adding a bottom row to page -->
+		<div class="row fixed-row-bottom">
+			<a href="https://data.mprog.nl/homework/d3-linked-views">Link to the assignment</a>
+			<p> -- Handed in: 18-05-2018 &#169; -- Contact: marc.moorman@live.nl</p>
+		</div>
+	</body>
+</html>
